--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -3,6 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#50C3A2"
+    android:backgroundTint="#CDB4DC"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     <fragment
